Correções no capítulo Master/Agent
Ajustes e simplificação dos comandos. Boa parte desse conteúdo já esta
no capítulo de instalação.