@@ -1,19 +1,19 @@
 Master / Agent
 ==============
 
-O Puppet é geralmente (mas nem sempre) usado como *master/agent*. O ciclo de operação nesses casos é o seguinte:
+O Puppet é deve ser utilizado com a arquitetura *Master / Agent*. O ciclo de operação nesses casos é o seguinte:
 
-1. Os clientes (chamados de *node*) possuem um agente instalado que permanece em execução e se conecta ao servidor central (chamado tipicamente de *master*) periodicamente (a cada 30 minutos, por padrão).
-2. O node solicita a sua configuração, que é compilada e enviada pelo master.
+1. Os clientes (chamados de *node*) possuem um agente instalado que permanece em execução e se conecta ao servidor central (chamado tipicamente de *Master*) periodicamente (a cada 30 minutos, por padrão).
+2. O node solicita a sua configuração, que é compilada e enviada pelo Master.
 3. Essa configuração é chamada de catálogo.
 4. O agente aplica o catálogo no node.
-5. O resultado da aplicação do catálogo é reportado ao master opcionalmente, havendo divergências ou não.
+5. O resultado da aplicação do catálogo é reportado ao Master, havendo divergências ou não.
 
 Outra maneira comum de implantação do Puppet é a ausência de um agente em execução nos nodes. A aquisição e aplicação do catálogo é agendada na crontab.
 
 Resolução de nomes
 ------------------
-A configuração de nome e domínio do sistema operacional, além da resolução de nomes, é fundamental para o correto funcionamento do Puppet, devido ao uso de certificados SSL para a autenticação de agentes e o servidor master.
+A configuração de nome e domínio do sistema operacional, além da resolução de nomes, é fundamental para o correto funcionamento do Puppet, devido ao uso de certificados SSL para a autenticação de agentes e o servidor Master.
 
 Para verificar a configuração de seu sistema, utilize o comando ``hostname``. A saída desse comando nos mostra se o sistema está configurado corretamente.
 
@@ -46,64 +46,42 @@ Hostname e domínio de cada sistema operacional devem resolver corretamente para
 
 Segurança e autenticação
 ------------------------
-As conexões entre agente e servidor master são realizadas usando o protocolo SSL e, através de certificados, ambos se validam.
-Assim, o agente sabe que está falando com o servidor correto e o servidor master sabe que está falando com um agente conhecido.
+As conexões entre agente e servidor Master são realizadas usando o protocolo SSL e, através de certificados, ambos se validam.
+Assim, o agente sabe que está falando com o servidor correto e o servidor Master sabe que está falando com um agente conhecido.
 
-Um servidor master do Puppet é um CA (Certificate Authority) e implementa diversas funcionalidades como gerar, assinar, revogar e remover certificados para os agentes.
+Um servidor Master do Puppet é um CA (Certificate Authority) e implementa diversas funcionalidades como gerar, assinar, revogar e remover certificados para os agentes.
 
-Os agentes precisam de um certificado assinado pelo master para receber o catálogo com as configurações.
+Os agentes precisam de um certificado assinado pelo Master para receber o catálogo com as configurações.
 
-Quando um agente e master são executados pela primeira vez, um certificado é gerado automaticamente pelo Puppet, usando o FQDN do sistema no certificado.
+Quando um agente e Master são executados pela primeira vez, um certificado é gerado automaticamente pelo Puppet, usando o FQDN do sistema no certificado.
 
-Prática Master/Agent
---------------------
+Prática Master / Agent
+----------------------
 
-Instalação do master
+Instalação do Master
 ````````````````````
-1. O pacote ``puppetserver`` deverá ser instalado na máquina que atuará como master. Certifique-se de que o hostname está correto.
+1. O pacote ``puppetserver`` deverá ser instalado na máquina que atuará como Master. Certifique-se de que o hostname está correto:
 
 ::
 
   # hostname --fqdn
   master.puppet
-   
-Instalando o pacote ``puppetserver`` no CentOS 7/Red Hat 7:
+
+Assumindo que os passos do capítulo **Instalação** foram executados anteriormente.
+
+Instalando o pacote ``puppetserver`` no CentOS:
 
 ::
 
-  # yum install -y http://yum.puppetlabs.com/el/7/PC1/x86_64/puppetlabs-release-pc1-0.9.2-1.el7.noarch.rpm
-  # yum install -y puppetserver tree
-  # echo "PATH=/opt/puppetlabs/bin:$PATH" >> /etc/bashrc
-  # echo "export PATH" >> /etc/bashrc
-  # export PATH=/opt/puppetlabs/bin:$PATH
+  # yum install puppetserver
 
-Instalando o pacote ``puppetserver`` no Debian 8:
+Instalando o pacote ``puppetserver`` no Debian:
 
 ::
 
-  # cd /tmp
-  # wget http://apt.puppetlabs.com/puppetlabs-release-pc1-jessie.deb
-  # dpkg -i  puppetlabs-release-pc1-jessie.deb
-  # apt-get update
-  # apt-get install -y puppetserver tree
-  # echo "PATH=/opt/puppetlabs/bin:$PATH" >> /etc/bash.bashrc
-  # echo "export PATH" >> /etc/bash.bashrc
-  # export PATH=/opt/puppetlabs/bin:$PATH
+  # apt-get install puppetserver
 
-Instalando o pacote ``puppetserver`` no Ubuntu 14.04:
-
-::
-
-  # cd /tmp
-  # wget http://apt.puppetlabs.com/puppetlabs-release-pc1-trusty.deb
-  # dpkg -i puppetlabs-release-pc1-trusty.deb
-  # apt-get update
-  # apt-get install -y puppetserver tree
-  # echo "PATH=/opt/puppetlabs/bin:$PATH" >> /etc/bash.bashrc
-  # echo "export PATH" >> /etc/bash.bashrc
-  # export PATH=/opt/puppetlabs/bin:$PATH
-
-Teremos a seguinte estrutura em ``/etc/puppet``:
+Teremos a seguinte estrutura em ``/etc/puppetlabs``:
 
 ::
 
@@ -147,18 +125,18 @@ Teremos a seguinte estrutura em ``/etc/puppet``:
 
  * ``fileserver.conf``: Utilizado para servir arquivos que não estejam em módulos.
 
- * ``code/environments/production/manifests/``: Armazena a configuração que será compilada e servida para os agentes que executam no ambiente de produção (padrão).
+ * ``code/environments/production/manifests``: Armazena a configuração que será compilada e servida para os agentes que executam no ambiente de *production* (padrão).
 
- * ``code/environments/production/modules/``: Armazena módulos com classes, arquivos, plugins e mais configurações para serem usadas nos manifests para o ambiente de produção (padrão).
+ * ``code/environments/production/modules/``: Armazena módulos com classes, arquivos, plugins e mais configurações para serem usadas nos manifests para o ambiente de *production* (padrão).
 
- * ``puppet.conf``: Principal arquivo de configuração, tanto do master como do agente.
+ * ``puppet.conf``: Arquivo de configuração usado pelo Master assim como o Agent.
 
 
 .. dica::
 
   |dica| **Sobre os arquivos de configuração**
   
-  Nas páginas abaixo você encontra mais detalhes sobre os arquivos de configuração do puppet.
+  Nas páginas abaixo você encontra mais detalhes sobre os arquivos de configuração do Puppet:
   
   https://docs.puppetlabs.com/puppet/latest/reference/config_important_settings.html
   https://docs.puppetlabs.com/puppet/latest/reference/dirs_confdir.html
@@ -172,143 +150,66 @@ Teremos a seguinte estrutura em ``/etc/puppet``:
 
   |nota| **Sobre os binários do Puppet**
   
-  Os binários e libs do Puppet 4.x ficam, por padrão, dentro do diretório ``/opt/puppetlabs/bin/``.
-  Os arquivos de configuração ficam, por padrão, dentro do diretório ``/etc/puppetlabs/``.
-  
-.. raw:: pdf
- 
- PageBreak
+  A instalação do Puppet 4 e todos seus componentes fica em ``/opt/puppetlabs``.
+
+  Os arquivos de configuração ficam em ``/etc/puppetlabs``.
 
 2. Configurando o serviço:
 
-Altere as configurações de memória do Java a ser usado pelo Puppet. 
+Altere as configurações de memória da JVM que é utilizada pelo Puppet Server para
+adequá-las a quantidade de memória disponível.
 
-* No CentOS 7 / Red Hat 7 edite o arquivo ``/etc/sysconfig/puppetserver``.
-
-::
-  
-  JAVA_ARGS="-Xms512m -Xmx512m -XX:MaxPermSize=256m"
-
-
-* No Debian 8 / Ubuntu 14.04 edite o arquivo ``/etc/default/puppetserver``.
+No CentOS edite o arquivo ``/etc/sysconfig/puppetserver`` e no Debian ou Ubuntu edite o arquivo ``/etc/default/puppetserver``:
 
 ::
   
   JAVA_ARGS="-Xms512m -Xmx512m -XX:MaxPermSize=256m"
- 
-Com esta configuração, será alocado  512 MB (no máximo) e 256 MB (no mínimo) para  uso exclusivo da JVM (Java Virtual Machine) usada pelo PuppetServer.
+
+
+Com esta configuração será alocado 512 MB para uso da JVM usada pelo Puppet Server.
 
 3. Iniciando o serviço:
 
- * No CentOS 7 / Red Hat 7:
+* No CentOS:
 
 ::
 
-  # systemctl restart puppetserver
+  # systemctl start puppetserver
 
- * No Debian 8 / Ubuntu 14.04:
+* No Debian / Ubuntu :
  
 ::
 
-  # service puppetserver restart
+  # service puppetserver start
   
 .. nota::
 
-  |nota| **Configurando o Firewall e o NTP**  
+  |nota| **Configuração de firewall e NTP**
 
-  Procure manter a hora do sistema de cada máquina corretamente configurada utilizando NTP, para evitar problemas na assinatura de certificados, entre outros.
+  Mantenha a hora corretamente configurada utilizando NTP para evitar problemas na assinatura de certificados.
 
-  A porta 8140/TCP do servidor Puppet-Master precisa estar acessível para as demais máquinas. 
-
-  Para a execução deste tutorial, o firewall foi parado no CentOS 7 / Red Hat 7 com os comandos abaixo.
-
-::
-
-  # systemctl stop firewalld
-  # systemctl disable firewalld
+  A porta 8140/TCP do servidor Puppet Server precisa estar acessível para as demais máquinas.
 
 
-* No CentOS 7 / Red Hat 7:
-
-O log do puppetserver fica (por padrão) em:
+Os logs do Puppet Server ficam em:
 
 * ``/var/log/puppetlabs/puppetserver/puppetserver.log``
 * ``/var/log/puppetlabs/puppetserver/puppetserver-daemon.log`` 
-* ``/var/log/messages``
-
-* No Debian 8 / Ubuntu 14.04:
-
-O log do puppetserver fica (por padrão) em:
-
-* ``/var/log/puppetlabs/puppetserver/puppetserver.log``
-* ``/var/log/puppetlabs/puppetserver/puppetserver-daemon.log`` 
-* ``/var/log/syslog``
 
 Instalação do agente em node1
 `````````````````````````````
-1. Certifique-se de que o nome e domínio do sistema estejam corretos e instale o pacote ``puppet`` na máquina node1:
+Assumindo que os passos do capítulo **Instalação** foram executados anteriormente.
+
+1. Certifique-se de que o nome e domínio do sistema estejam corretos:
 
 ::
 
   # hostname --fqdn
   node1.puppet
 
-Instalando o pacote ``puppet-agent`` no CentOS 7/Red Hat 7:
+2. Em uma máquina em que o agente está instalado, precisamos configurá-la para que ela saiba quem é o Master.
 
-::
-
-  # yum install -y http://yum.puppetlabs.com/el/7/PC1/x86_64/puppetlabs-release-pc1-0.9.2-1.el7.noarch.rpm
-  # yum install -y puppet-agent
-  # echo "PATH=/opt/puppetlabs/bin:$PATH" >> /etc/bashrc
-  # echo "export PATH" >> /etc/bashrc
-  # export PATH=/opt/puppetlabs/bin:$PATH
-
-Instalando o pacote ``puppet-agent`` no Debian 8:
-
-::
-
-  # cd /tmp
-  # wget http://apt.puppetlabs.com/puppetlabs-release-pc1-jessie.deb
-  # dpkg -i  puppetlabs-release-pc1-jessie.deb
-  # apt-get update
-  # apt-get install -y puppet-agent
-  # echo "PATH=/opt/puppetlabs/bin:$PATH" >> /etc/bash.bashrc
-  # echo "export PATH" >> /etc/bash.bashrc
-  # export PATH=/opt/puppetlabs/bin:$PATH
-
-Instalando o pacote ``puppet-agent`` no Ubuntu 14.04:
-
-::
-
-  # cd /tmp
-  # wget http://apt.puppetlabs.com/puppetlabs-release-pc1-trusty.deb
-  # dpkg -i puppetlabs-release-pc1-trusty.deb
-  # apt-get update
-  # apt-get install -y puppet-agent
-  # echo "PATH=/opt/puppetlabs/bin:$PATH" >> /etc/bash.bashrc
-  # echo "export PATH" >> /etc/bash.bashrc
-  # export PATH=/opt/puppetlabs/bin:$PATH
-
-  
-A estrutura do diretório ``/etc/puppetlabs`` é semelhante a do master.
-
- * No CentOS 7 / Red Hat 7:
-
-O log do puppet-agent fica (por padrão) em:
-
-* ``/var/log/messages``
-* ``/var/log/puppetlabs/puppet``
-
- * No Debian 8 / Ubuntu 14.04:
-
-O log do puppet-agent fica (por padrão) em:
-
-* ``/var/log/syslog``
-* ``/var/log/puppetlabs/puppet``
-
-2. Em uma máquina em que o agente está instalado, precisamos configurá-la para que ele saiba quem é o master.
-
-No arquivo ``/etc/puppetlabs/puppet/puppet.conf``, adicione as linhas abaixo.
+No arquivo ``/etc/puppetlabs/puppet/puppet.conf``, adicione as linhas abaixo:
 
 ::
 
@@ -317,16 +218,14 @@ No arquivo ``/etc/puppetlabs/puppet/puppet.conf``, adicione as linhas abaixo.
   certname = node1.puppet
   server = master.puppet
   environment = production
-  # intervalo (em segundos) de atualizacao do catalogo
-  runinterval = 300 
 
 .. nota::
 
   |nota| **Conectividade**
   
-  Certifique-se de que o servidor master na porta 8140 TCP está acessível para os nodes.
+  Certifique-se de que o servidor Master na porta 8140 TCP está acessível para os nodes.
 
-3. Conecte-se ao master e solicite assinatura de certificado:
+3. Conecte-se ao Master e solicite assinatura de certificado:
 
 ::
 
@@ -336,7 +235,7 @@ No arquivo ``/etc/puppetlabs/puppet/puppet.conf``, adicione as linhas abaixo.
   Info: Creating a new SSL certificate request for node1.puppet
   Info: Certificate Request fingerprint (SHA256): 6C:7E:E6:3E:EC:A4:15:56: ...
 
-4. No servidor master aparecerá a solicitação de assinatura para a máquina node1.puppet. Assine-a
+4. No servidor Master aparecerá a solicitação de assinatura para a máquina `node1.puppet`. Assine-a.
 
  * O comando abaixo deve ser executado em **master.puppet**.
 
@@ -365,7 +264,7 @@ No arquivo ``/etc/puppetlabs/puppet/puppet.conf``, adicione as linhas abaixo.
   Info: Creating state file /var/lib/puppet/state/state.yaml
   Finished catalog run in 0.05 seconds
 
-Agora execute os comandos abaixo para iniciar o puppet-agent como serviço e habilitá-lo para ser executado após o boot do sistema operacional.
+Agora execute os comandos abaixo para iniciar o agente do Puppet como serviço e habilitá-lo para ser executado após o boot do sistema operacional:
 
 ::
   
@@ -375,5 +274,8 @@ Agora execute os comandos abaixo para iniciar o puppet-agent como serviço e hab
 
   |dica| **Possíveis problemas com certificados SSL**
   
-  É importante que os horários do master e dos nodes não tenham grandes diferenças e estejam, de preferência, sincronizados.
-  Conexões SSL confiam no relógio e, se estiverem incorretos, então sua conexão pode falhar com um erro indicando que os certificados não são confiáveis. Procure manter os relógios corretamente configurados utilizando NTP.
+  É importante que os horários do Master e dos nodes estejam sincronizados.
+
+  Conexões SSL confiam no relógio e, se estiverem incorretos, então sua conexão pode falhar com um erro indicando que os
+  certificados não são confiáveis. Procure manter os relógios corretamente configurados utilizando NTP.
+
